--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(getFragmentSequence)
 export(getIRTModel)
 export(getPeptides)
 export(getSearchedModifications)
+export(getUserOptions)
 export(parseMaxQuantMSMS)
 export(parseRange)
+export(parseTargetsFile)
 export(plotIRTCalibration)
 export(proteotypicPeptideExport)
 export(skylineExport)
