--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getCMDLineOptions)
 export(getEmpiricalIRT)
 export(getFragmentSequence)
 export(getIRTModel)
+export(getPTMColors)
 export(getPeptides)
 export(getSearchedModifications)
 export(getUserOptions)
